--- a/react-app/src/component/css/sb-admin-2.css
+++ b/react-app/src/component/css/sb-admin-2.css
@@ -5153,7 +5153,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   line-height: 0;
   font-size: 0.75rem;
   background-color: #eaecf4;
-  /*border-radius: 0.35rem;*/
+  border-radius: 0 !important;
 }
 
 .progress-bar {
