--- a/react-app/src/component/css/track.css
+++ b/react-app/src/component/css/track.css
@@ -19,3 +19,20 @@
     flex-basis: 100px;
     flex-grow: 1;
 }
+
+/*.container::-webkit-scrollbar{
+    width: 5px;
+}
+
+
+.container ::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ff8a00), to(#da1b60));
+    box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .25), inset -2px -2px 2px rgba(0, 0, 0, .25)
+}
+
+.container ::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 10px;
+    background: linear-gradient(to right, #201c29, #201c29 1px, #100e17 1px, #100e17)
+}*/
