--- a/react-app/src/component/css/track.css
+++ b/react-app/src/component/css/track.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 
@@ -18,6 +18,61 @@
     text-align:center;
     flex-basis: 100px;
     flex-grow: 1;
+}
+
+.collapse.multi-collapse {
+    height: 50vh;
+    overflow-y: scroll;
+}
+
+.collapse.multi-collapse::-webkit-scrollbar { width: 0 !important }
+
+.custom-height {
+    height: 75vh !important;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 350px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+  }
+.flip-card-front img {
+    width: 300px;
+    height: 350px;
 }
 
 /*.container::-webkit-scrollbar{
