done until bottleneck- removed unwanted files

--- a/react-app/src/component/css/track.css
+++ b/react-app/src/component/css/track.css
@@ -87,6 +87,13 @@
   float: right;
 }
 
+.prog select {
+ height: 20%;
+ width: 50%;
+ margin-left: 25%;
+ border: 3px solid #4A6FDC;
+}
+
 /*.container::-webkit-scrollbar{
     width: 5px;
 }
